--- a/styles/style1.css
+++ b/styles/style1.css
@@ -8,6 +8,7 @@ h1 {
 body {
     background : whitesmoke ;
     color : yellowgreen ;
+    font-family : sans-serif, serif;
 }
 
 a {
@@ -35,6 +36,10 @@ a:hover {
     margin-top: 100px;
 }
 
+.thin_border{
+    border : 2px solid black;
+}
+
 
 p {
     color : orange;
@@ -56,3 +61,10 @@ p {
 
 
 
+.color1 {
+    color: red;
+}
+
+.color2 {
+    color: blue;
+}
